--- a/exercices.html
+++ b/exercices.html
@@ -58,8 +58,12 @@
           </section>
           <button id="btn-turn">Tourner</button>
       </section>
-      <section id="ex6">
-          <h2>Exercice 6</h2>
+      <section id="ex6">  
+          <h2>Exercice 6</h2>  
+          <section id="ball">  
+        
+          </section>    
+          <button id="btn-roll">Rouler</button>  
       </section>
       <script type="application/javascript" src="index.js"></script>
       <!--<script type="application/javascript" src="correction.js"></script>-->
