--- a/dropdown-btn/index.html
+++ b/dropdown-btn/index.html
@@ -8,12 +8,11 @@
     <body>
         <header>
             <nav>
-                <ul>
-                    <li><button id="d-down">Dropdown Button</button>
-                        <ul>
-                            
-                        </ul>
-                    </li>
+                <button id="d-down">Dropdown Button</button>
+                <ul id="hidden-list">
+                    <li>home</li>
+                    <li>blog</li>
+                    <li>contact</li>
                 </ul>
             </nav>
         </header>
